stderr
Card.java:2: error: constructor Card in enum Card cannot be applied to given types;
    CLOVER("Okinawa"),
          ^
  required: no arguments
  found:    String
  reason: actual and formal argument lists differ in length
Card.java:3: error: constructor Card in enum Card cannot be applied to given types;
    DIAMOND("Ehime"),
           ^
  required: no arguments
  found:    String
  reason: actual and formal argument lists differ in length
Card.java:4: error: constructor Card in enum Card cannot be applied to given types;
    HEART("Ehime"),
         ^
  required: no arguments
  found:    String
  reason: actual and formal argument lists differ in length
Card.java:5: error: constructor Card in enum Card cannot be applied to given types;
    CLUB("Aomori");
        ^
  required: no arguments
  found:    String
  reason: actual and formal argument lists differ in length
4 errors
